tests/compile/shader_modules/io_mismatch_format.gcc.stderr
In file included from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/io_mismatch_format.cpp:6:
include/meta/combinators.hpp: In instantiation of 'auto rcgp::RasterizationCombinator<T>::operator()(VertexShader&, FragmentShader&) const [with VertexShader = rcgp::shader_stage<rcgp::ShaderStage::eVertex, std::tuple<rcgp::Smooth<rcgp::vector<float, 4> >, rcgp::Smooth<rcgp::vector<float, 3> >, rcgp::Smooth<rcgp::vector<float, 3> > >, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4> > >; FragmentShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3>, rcgp::vector<float, 3>, rcgp::vector<float, 2> >; rcgp::Topology T = rcgp::Topology::eTriangleList]':
tests/compile/shader_modules/io_mismatch_format.cpp:30:4:   required from here
   26 |         auto pipeline = RasterizationCombinator <Topology::eTriangleList> {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   27 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   28 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   29 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   30 |         } (vs, fs);
      |         ~~^~~~~~~~
include/meta/combinators.hpp:83:39: error: static assertion failed: rasterization combinator got incompatible shader modules:
    vertex shader outputs: (f32[4], f32[3], f32[3])
    fragment shader inputs: (f32[3], f32[3], f32[2])
type mismatch in @0; vertex shader returns f32[4] while
fragment shader requires f32[3]
   83 |                         static_assert(false, io);
      |                                       ^~~~~
include/meta/combinators.hpp:83:39: note: 'false' evaluates to false
